# ele-quant

./: CHECKLIST.md  PLAN.md  README.md  book  pyproject.toml  split_book.py
chapter 11/: 12-chapter-11.md
chapter 13/: 14-chapter-13.md
chapter 5/: 06-chapter-5.md
examples/: chapter_1_concepts_example.py  chapter_2_returns_vol_example.py  chapter_3_performance_example.py  chapter_4_linear_models_example.py  chapter_5_risk_evaluation_example.py  chapter_6_fundamental_model_example.py  chapter_7_statistical_model_example.py  chapter_8_evaluating_excess_returns_example.py
markdown/: 00-introduction.md  01-notation.md  05-chapter-4.md  08-chapter-7.md  09-chapter-8.md  10-chapter-9.md  11-chapter-10.md  15-chapter-14.md  16-chapter-15.md  17-references.md  18-index.md
quant_elements_lib/: __init__.py
quant_elements_lib/backtesting/: __init__.py  framework.py  ras_evaluation.py
quant_elements_lib/core/: __init__.py  factor_model_base.py
quant_elements_lib/factor_models/: __init__.py  statistical_model.py  (+2 more)
scripts/: split_book.py
tests/: __init__.py  test_backtesting.py  test_common_concepts.py  test_core_factor_model.py  test_factor_models_fundamental.py  test_factor_models_fundamental.py.skip  test_factor_models_statistical.py  test_factor_models_transformations.py  test_factor_models_utils.py  test_performance_metrics.py  test_returns_analysis.py  test_returns_analysis_currency.py  test_risk_evaluation.py  test_utils.py  test_utils.py.skip  test_utils_preprocessing.py  test_utils_preprocessing.py.skip  test_utils_regression.py  test_volatility_models.py
(+38 files in other folders)
